# KuiklyUI

./: .gitignore  .ignoreRevsFile  1.3.10_test_publish.sh  1.4.20_test_publish.sh  1.5.31_test_publish.sh  1.6.21_test_publish.sh  1.7.20_test_publish.sh  1.8.21_test_publish.sh  1.9.22_test_publish.sh  2.0.21_test_publish.sh  CONTRIBUTING.md  LICENSE  OpenKuiklyIOSRender.podspec  README-zh_CN.md  README.md  add_internal.sh  build.1.3.10.gradle.kts  build.1.4.20.gradle.kts  build.1.6.21.gradle.kts  build.1.8.21.gradle.kts  build.1.9.22.gradle.kts  build.2.0.21.gradle.kts  build.gradle.kts  gradle.properties  settings.1.3.10.gradle.kts  settings.1.4.20.gradle.kts  settings.1.5.31.gradle.kts  settings.1.6.21.gradle.kts  settings.1.7.20.gradle.kts  settings.1.8.21.gradle.kts  settings.1.9.22.gradle.kts  settings.2.0.21.gradle.kts  settings.2.0.ohos.gradle.kts  settings.gradle.kts  test_publish.sh
.github/: CODEOWNERS
androidApp/: build.gradle.kts
compose/: build.1.8.21.gradle.kts  build.1.9.22.gradle.kts  build.2.0.21.gradle.kts  build.2.0.ohos.gradle.kts  composeDSL.podspec
core-annotations/: build.1.4.20.gradle  build.1.5.31.gradle.kts  build.1.7.20.gradle.kts  build.1.8.21.gradle.kts  build.2.0.21.gradle.kts  build.2.0.ohos.gradle.kts  build.gradle.kts  core-annotations.podspec  core_annotations.podspec
core-kapt/: build.gradle
core-ksp/: build.1.5.31.gradle.kts  build.1.6.21.gradle.kts  build.1.7.20.gradle.kts  build.1.8.21.gradle.kts  (+4 more)
ohosApp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
ohosApp/entry/src/main/cpp/types/kuikly_entry/: index.d.ts
(+1688 files in other folders)
